src/sfdc/base/main/default/objects/B2C_Site__c/B2C_Site__c.object-meta.xml
<CustomObject>
    <description>... custom object used to represent B2C Commerce storefronts.</description>
    <label>B2C Site</label>
    <nameField>
        <label>B2C Site ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>