src/sfdc/base/main/default/objects/B2C_Site__c/fields/API_Url__c.field-meta.xml
<CustomField>
    <fullName>API_Url__c</fullName>
    <description>... represents the API url used to retrieve B2C Commerce storefront details.</description>
    <inlineHelpText>... represents the API url used to retrieve B2C Commerce storefront details.</inlineHelpText>
    <label>Record API Url</label>
    <type>Url</type>
</CustomField>