src/sfdc/base/main/default/objects/B2C_Site__c/fields/B2C_Client_ID_Value__c.field-meta.xml
<CustomField>
    <fullName>B2C_Client_ID_Value__c</fullName>
    <description>... represents the default B2C Client ID for a given B2C Site.</description>
    <formula>B2C_Client_ID__r.Name</formula>
    <inlineHelpText>... represents the default B2C Client ID for a given B2C Site.</inlineHelpText>
    <label>B2C Client ID Value</label>
    <type>Text</type>
</CustomField>