src/sfdc/base/main/default/objects/B2C_Site__c/fields/B2C_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>B2C_Instance_Name__c</fullName>
    <description>... represents the B2C Commerce Instance a given Site is served from.</description>
    <formula>Customer_List__r.B2C_Instance__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>... represents the B2C Commerce Instance a given Site is served from.</inlineHelpText>
    <label>B2C Instance Name</label>
    <type>Text</type>
</CustomField>