src/sfdc/base/main/default/objects/B2C_Site__c/fields/Base_Custom_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Custom_Site_Url__c</fullName>
    <description>... represents the custom external / customer-facing url used to access a storefront.</description>
    <inlineHelpText>... represents the custom external / customer-facing url used to access a storefront.</inlineHelpText>
    <label>Base Custom Site Url</label>
    <type>Url</type>
</CustomField>