src/sfdc/base/main/default/objects/B2C_Site__c/fields/Base_Internal_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Internal_Site_Url__c</fullName>
    <description>... represents the base internal url used to access the B2C Commerce storefront environment.</description>
    <formula>LEFT(API_Url__c, FIND( &apos;/s/&apos;, API_Url__c)-1) &amp; &quot;/on/demandware.store/Sites-&quot; &amp;  Name &amp; &quot;-Site&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>... represents the base internal url used to access the B2C Commerce storefront environment.</inlineHelpText>
    <label>Base Internal Site Url</label>
    <type>Text</type>
</CustomField>