src/sfdc/base/main/default/objects/B2C_Site__c/fields/Customer_List__c.field-meta.xml
<CustomField>
    <fullName>Customer_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>... represents the B2C Commerce parent CustomerList.</description>
    <inlineHelpText>... represents the B2C Commerce parent CustomerList.</inlineHelpText>
    <label>Customer List</label>
    <referenceTo>B2C_CustomerList__c</referenceTo>
    <relationshipLabel>B2C Sites</relationshipLabel>
    <relationshipName>B2C_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>