src/sfdc/base/main/default/objects/B2C_Site__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>... describes a given B2C Commerce Storefront.</description>
    <inlineHelpText>... describes a given B2C Commerce Storefront.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>