src/sfdc/base/main/default/objects/B2C_Site__c/fields/Enable_Active_Customer_Promotion_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Active_Customer_Promotion_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... describes whether the current storefront can be used to retrieve the active customer promotions.</description>
    <inlineHelpText>... describes whether the current storefront can be used to retrieve the active customer promotions.</inlineHelpText>
    <label>Enable Active Customer Promotion Sync</label>
    <type>Checkbox</type>
</CustomField>