src/sfdc/base/main/default/objects/B2C_Site__c/fields/Enable_Order_on_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Enable_Order_on_Behalf_Of__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... describes whether the current storefront can be used to launch Order on Behalf Of shopping sessions.</description>
    <inlineHelpText>... describes whether the current storefront can be used to launch Order on Behalf Of shopping sessions.</inlineHelpText>
    <label>Enable Order on Behalf Of</label>
    <type>Checkbox</type>
</CustomField>