src/sfdc/base/main/default/objects/B2C_Site__c/fields/Enable_Password_Reset__c.field-meta.xml
<CustomField>
    <fullName>Enable_Password_Reset__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... describes whether the current storefront can be used to reset customer passwords.</description>
    <inlineHelpText>... describes whether the current storefront can be used to reset customer passwords.</inlineHelpText>
    <label>Enable Password Reset</label>
    <type>Checkbox</type>
</CustomField>