src/sfdc/base/main/default/objects/B2C_Site__c/fields/Enable_Profile_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Profile_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes whether B2C Commerce Profiles can be created for this B2C Commerce Storefront.</description>
    <inlineHelpText>... describes whether B2C Commerce Profiles can be created for this B2C Commerce Storefront.</inlineHelpText>
    <label>Enable Profile Creation</label>
    <type>Checkbox</type>
</CustomField>