src/sfdc/base/main/default/objects/B2C_Site__c/fields/Enable_Profile_Updates__c.field-meta.xml
<CustomField>
    <fullName>Enable_Profile_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if B2C Commerce profiles can be updated for this B2C Commerce Storefront.</description>
    <inlineHelpText>... describes if B2C Commerce profiles can be updated for this B2C Commerce Storefront.</inlineHelpText>
    <label>Enable Profile Updates</label>
    <type>Checkbox</type>
</CustomField>