src/sfdc/base/main/default/objects/B2C_Site__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if a given B2C Commerce storefront is active and accepting integration activities.</description>
    <inlineHelpText>... describes if a given B2C Commerce storefront is active and accepting integration activities.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>