src/sfdc/base/main/default/objects/B2C_Site__c/fields/Is_CustomerList_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_CustomerList_Active__c</fullName>
    <description>... represents the activeStatus of the parent B2C CustomerList</description>
    <formula>Customer_List__r.Is_Active__c</formula>
    <inlineHelpText>... represents the activeStatus of the parent B2C CustomerList</inlineHelpText>
    <label>Is CustomerList Active</label>
    <type>Checkbox</type>
</CustomField>