src/sfdc/base/main/default/objects/B2C_Site__c/fields/Is_Instance_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Instance_Active__c</fullName>
    <description>... represents the active status of the parent B2C Instance</description>
    <formula>Customer_List__r.B2C_Instance__r.Is_Active__c</formula>
    <inlineHelpText>... represents the active status of the parent B2C Instance</inlineHelpText>
    <label>Is Instance Active</label>
    <type>Checkbox</type>
</CustomField>