src/sfdc/base/main/default/objects/B2C_Site__c/fields/Is_JWT_Certificate_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_JWT_Certificate_Verified__c</fullName>
    <description>... describes if the JWT Certificate associated to the default B2C Client ID for a B2C Site has been validated.</description>
    <formula>B2C_Client_ID__r.Is_Certificate_Verified__c</formula>
    <inlineHelpText>... describes if the JWT Certificate associated to the default B2C Client ID for a B2C Site has been validated.</inlineHelpText>
    <label>Is JWT Certificate Verified</label>
    <type>Checkbox</type>
</CustomField>