src/sfdc/base/main/default/objects/B2C_Site__c/fields/OCAPI_Version_No__c.field-meta.xml
<CustomField>
    <fullName>OCAPI_Version_No__c</fullName>
    <description>... represents the OCAPI Version Number that should be used for API requests.</description>
    <inlineHelpText>... represents the OCAPI Version Number that should be used for API requests.</inlineHelpText>
    <label>OCAPI Version No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2C_OCAPI_Versions</valueSetName>
    </valueSet>
</CustomField>