src/sfdc/base/main/default/objects/B2C_Site__c/fields/OOBO_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>OOBO_Customer_Number__c</fullName>
    <description>... represents the B2C Commerce Customer Profile Customer Number for the Anonymous Order On Behalf Of Customer.</description>
    <inlineHelpText>... represents the B2C Commerce Customer Profile Customer Number for the Anonymous Order On Behalf Of Customer.</inlineHelpText>
    <label>OOBO Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>