src/sfdc/base/main/default/objects/B2C_Site__c/fields/OOBO_Named_Credential_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>OOBO_Named_Credential_Developer_Name__c</fullName>
    <description>... represents the Salesforce Developer Name for the Per-User Named Credential that will be used to authenticate Service Agents as Business Manager users with the rights to launch Order on Behalf Of shopping sessions.</description>
    <inlineHelpText>... represents the Salesforce Developer Name for the Per-User Named Credential that will be used to authenticate Service Agents as Business Manager users with the rights to launch Order on Behalf Of shopping sessions.</inlineHelpText>
    <label>OOBO Named Credential Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>