src/sfdc/base/main/default/objects/B2C_Site__c/fields/Storefront_Status__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Status__c</fullName>
    <description>... represents the current online status for a given B2C Commerce Storefront.</description>
    <inlineHelpText>... represents the current online status for a given B2C Commerce Storefront.</inlineHelpText>
    <label>Storefront Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Protected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>