src/sfdc/base/main/default/objects/B2C_Site__c/listViews/Assisted_Shopping_Configuration.listView-meta.xml
<ListView>
    <fullName>Assisted_Shopping_Configuration</fullName>
    <columns>B2C_Instance_Name__c</columns>
    <columns>Customer_List__c</columns>
    <columns>NAME</columns>
    <columns>B2C_Client_ID__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Enable_Order_on_Behalf_Of__c</columns>
    <columns>Enable_Password_Reset__c</columns>
    <columns>OOBO_Active_Url__c</columns>
    <columns>OOBO_Named_Credential_Developer_Name__c</columns>
    <columns>OCAPI_Version_No__c</columns>
    <columns>OOBO_Customer_ID__c</columns>
    <columns>OOBO_Customer_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Order on Behalf Of Configuration</label>
</ListView>