src/sfdc/base/main/default/objects/B2C_Site__c/listViews/B2C_Access_Token_Configuration.listView-meta.xml
<ListView>
    <fullName>B2C_Access_Token_Configuration</fullName>
    <columns>B2C_Instance_Name__c</columns>
    <columns>Customer_List__c</columns>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>B2C_Client_ID__c</columns>
    <columns>JWT_Certificate_Name__c</columns>
    <columns>Is_B2C_Client_ID_Active__c</columns>
    <columns>Is_JWT_Certificate_Verified__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>B2C Client ID Configuration</label>
</ListView>